tests/modules/modules.exp
Error ------------------------------------------------------------------------------------------------------ cli2.js:5:3

Cannot call `f` with `"..."` bound to `x` because string [1] is incompatible with number [2]. [incompatible-call]

   cli2.js:5:3
   5| f("...");
        ^^^^^ [1]

References:
   lib.js:7:14
   7| function f(x:number):number { g(x); return x; }
                   ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ lib.js:7:33

Cannot call `g` with `x` bound to `x` because number [1] is incompatible with string [2]. [incompatible-call]

   lib.js:7:33
   7| function f(x:number):number { g(x); return x; }
                                      ^

References:
   lib.js:7:14
   7| function f(x:number):number { g(x); return x; }
                   ^^^^^^ [1]
   lib.js:3:14
   3| function g(x:string) { }
                   ^^^^^^ [2]



Found 2 errors
